# UniStack

./: .gitignore  .golangci.yml  .goreleaser.yaml  .osv-scanner.toml  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .unirtm.toml  AGENTS.md  CHANGELOG.md  README.md  README_zh-CN.md  VERSION  fix_asserts.py  fix_cmd.py  fix_executor.py  fix_openssh_vars.py  get_logs.py  go.mod  go.sum  install.bat  install.ps1  install.sh  lychee.toml  main.go  package-lock.json  package.json  release-notes.md  test-hello.yml  test_nixos.yml  trivy.yaml
.github/: dependabot.yml
.kiro/: comparison_report.md  migration_assessment.md  task_system_assessment.md
.specify/: extensions.yml  feature.json
ansible/: ansible.cfg  embed.go  requirements.txt  requirements.yml  scratch.yml
cmd/: 0.root.go  1.version.go  10.config.go  11.cache.go  12.generate.go  13.apply.go  13.run.go  14.exec.go  14.list.go  15.uninstall.go  15.up.go  16.registry.go  16.upgrade.go  17.update.go  18.download.go  19.install.go  2.env.go  20.source.go  3.completion.go  4.self-update.go  44.implode.go  49.edit.go  6.df.go  61.df.go  7.edit.go  8.implode.go  9.doctor.go  run.go
docs/: alpine-compatibility.md  alpine-nodejs-solution.md  alpine-unigo-quickstart.md  alpine-unistack-quickstart.md  cross-platform-nodejs-perfect-solution.md  index.md  package-lock.json  package.json  security-ci-path-cache.md  (+3 more)
pypi/: pyproject.toml  setup.py
pypi/scripts/: build.sh
pypi/snowdreamtech_unigo/: __init__.py  cli.py
pypi/snowdreamtech_unistack/: __init__.py  cli.py
(+676 files in other folders)
