[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowdreamtech-unistack"
version = "0.0.0" # This will be replaced during build
description = "UniStack: A fast, flexible, and enterprise-grade Golang CLI template"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "snowdreamtech", email = "snowdreamtech@qq.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[project.scripts]
unistack = "snowdreamtech_unistack.cli:main"
